--- a/notebooks/LSMC_CEV.ipynb
+++ b/notebooks/LSMC_CEV.ipynb
@@ -33,7 +33,7 @@
     "K = 110     # Strike price\n",
     "\n",
     "sigma = 0.2     # Volatility constant\n",
-    "gamma = 0.9     # Stock price CEV power for equities\n",
+    "gamma = 0.9     # Stock price CEV power\n",
     "\n",
     "constants = [S_0, r, sigma, gamma]\n",
     "model = 'cev'\n",
